@@ -6,7 +6,6 @@ export(fscores)
 export(itemplot)
 export(key2binary)
 export(mirt)
-export(read.mirt)
 export(simdata)
 exportClasses(bfactorClass)
 exportClasses(confmirtClass)
@@ -22,7 +21,6 @@ import(MASS)
 import(Matrix)
 import(lattice)
 import(mvtnorm)
-import(plink)
 import(psych)
 importFrom(stats,anova)
 importFrom(stats,fitted)
