@@ -6,22 +6,17 @@
 #' @usage 
 #' itemplot(object, ...)
 #' 
-#' \S4method{itemplot}{mirtClass}(object, ...)
+#' \S4method{itemplot}{mirtClass}(object, type = 'trace', ...)
 #'
-#' \S4method{itemplot}{bfactorClass}(object, ...) 
-#'
-#' \S4method{itemplot}{polymirtClass}(object, ...)
+#' \S4method{itemplot}{bfactorClass}(object, type = 'trace' , ...) 
 #'
 #' @aliases itemplot-method itemplot,mirtClass-method 
-#' itemplot,polymirtClass-method itemplot,bfactorClass-method
-#' @param object a computed model of class \code{bfactorClass},
-#' \code{mirtClass}, or \code{polymirtClass}
-#' @param ... additional arguments to be passed on to \code{\link[plink]{plink}} generic
-#' \code{plot()}. See the \code{\link[plink]{plink}} package for further details.  
-#' @section Methods: \describe{ \item{itemplot}{\code{signature(object =
-#' "bfactorClass")}} \item{itemplot}{\code{signature(object =
-#' "mirtClass")}} \item{itemplot}{\code{signature(object =
-#' "polymirtClass")}} }
+#' itemplot,bfactorClass-method
+#' @param object a computed model of class \code{bfactorClass} or
+#' \code{mirtClass}
+#' @param type plot type to use, information (\code{'info'}), information contours \code{('infocontour')},
+#'  or item trace lines (\code{'trace'})
+#' @param ... additional arguments to be passed to lattice 
 #' @author Phil Chalmers \email{rphilip.chalmers@@gmail.com}
 #' @seealso \code{\link{plot}}, \code{\link{mirt}}, \code{\link{bfactor}},
 #' \code{\link{polymirt}}
@@ -36,14 +31,8 @@
 #' data(LSAT7)
 #' fulldata <- expand.table(LSAT7)
 #' mod1 <- mirt(fulldata,1)
-#' mod2 <- mirt(fulldata,2)
 #' 
 #' itemplot(mod1)
-#' itemplot(mod1, combine = 5, auto.key=list(space="right"))
-#'
-#' itemplot(mod2, drape = TRUE)
-#' itemplot(mod2, type = "vectorplot1")
-#' 
 #'     }
 #' 
 setGeneric("itemplot", 
@@ -65,11 +54,10 @@ setGeneric("itemplot",
 setMethod(
 	f = "itemplot",
 	signature = signature(object = 'mirtClass'),
-	definition = function(object, ...)
+	definition = function(object, item = 1, type = 'trace', ...)
 	{  			
-		x <- read.mirt(object)
-		ret <- plot(x, ...)
-		invisible(ret)		
+		x <- itemplot.main(object, item, type, ...)		        
+		return(x)
 	}
 )
 
@@ -78,24 +66,55 @@ setMethod(
 setMethod(
 	f = "itemplot",
 	signature = signature(object = 'bfactorClass'),
-	definition = function(object, ...)
+	definition = function(object, item = 1, type = 'trace', ...)
 	{
-		x <- read.mirt(object)
-		ret <- plot(x, ...)
-		invisible(ret)
+	    x <- itemplot.main(object, item, type, ...)    	
+	    return(x)
 	}
 )
 
-#------------------------------------------------------------------------------
-# @rdname itemplot-methods  
-setMethod(
-	f = "itemplot",
-	signature = signature(object = 'polymirtClass'),
-	definition = function(object, ...)
-	{
-		x <- read.mirt(object)
-		ret <- plot(x, ...)
-		invisible(ret)
-	}
-)
-
+itemplot.main <- function(x, item, type, ...){
+    browser()
+    nfact <- ncol(x@F)
+    if(nfact > 2) stop('Can not plot high dimensional models')
+    Theta <- x@Theta    
+    P <- ProbTrace(x=x@pars[[item]], Theta=Theta)     
+    a <- ExtractLambdas(x@pars[[item]])
+    if(x@pars[[item]]@bfactor) a <- a[x@pars[[item]]@est[1:nfact]]
+    A <- sqrt(sum(a^2))
+    info <- ItemInfo(x=x@pars[[item]], as.matrix(A), Theta=Theta)
+    if(nfact == 1){
+        if(type == 'trace'){
+            P <- ProbTrace(x=x@pars[[item]], Theta=Theta)
+            plot(Theta, P[,1], col = 1, type='l', main = paste('Item', item), 
+                 ylab = expression(P(theta)), xlab = expression(theta), ylim = c(0,1))
+            for(i in 2:ncol(P))
+                lines(Theta, P[,i], col = i)        
+        }
+        if(type == 'info'){            
+            plot(Theta, info, col = 1, type='l', main = paste('Information for item', item), 
+                 ylab = expression(I(theta)), xlab = expression(theta))
+        }
+        if(type == 'infocontour') stop('Cannot draw contours for 1 factor models')
+    } else {
+        plt <- data.frame(info = info, Theta1 = Theta[,1], Theta2 = Theta[,2])
+        plt2 <- data.frame(P = P, Theta1 = Theta[,1], Theta2 = Theta[,2])
+        colnames(plt2) <- c(paste("P", 1:ncol(P), sep=''), "Theta1", "Theta2")
+        plt2 <- reshape(plt2, direction='long', varying = paste("P", 1:ncol(P), sep=''), v.names = 'P', 
+                times = paste("P", 1:ncol(P), sep=''))
+        colnames(plt) <- c("info", "Theta1", "Theta2")            
+        if(type == 'infocontour')												
+            return(contourplot(info ~ Theta1 * Theta2, data = plt, 
+                               main = paste("Item", item, "Information Contour"), xlab = expression(theta[1]), 
+                               ylab = expression(theta[2])))
+        if(type == 'info')
+            return(lattice::wireframe(info ~ Theta1 + Theta2, data = plt, main = paste("Item ", item, "Information"), 
+                             zlab=expression(I(theta)), xlab=expression(theta[1]), ylab=expression(theta[2]), 
+                             scales = list(arrows = FALSE), colorkey = TRUE, drape = TRUE, ...))
+        if(type == 'trace'){
+            return(lattice::wireframe(P ~ Theta1 + Theta2|time, data = plt2, main = paste("Item ", item, "Trace"), 
+                             zlab=expression(I(theta)), xlab=expression(theta[1]), ylab=expression(theta[2]), 
+                             scales = list(arrows = FALSE), colorkey = TRUE, drape = TRUE, ...))            
+        }        
+    }    
+}
