@@ -15,7 +15,7 @@
 #' @author Phil Chalmers \email{rphilip.chalmers@@gmail.com}
 #' @useDynLib mirt 
 #' @importFrom stats anova fitted residuals
-#' @import psych lattice MASS GPArotation mvtnorm Matrix plink
+#' @import psych lattice MASS GPArotation mvtnorm Matrix 
 #' @exportMethod anova 
 #' @exportMethod fitted
 #' @exportMethod residuals
