@@ -3,26 +3,21 @@
 \alias{itemplot}
 \alias{itemplot,bfactorClass-method}
 \alias{itemplot,mirtClass-method}
-\alias{itemplot,polymirtClass-method}
 \alias{itemplot-method}
 \title{Displays item surface and information plots}
 \arguments{
   \item{object}{a computed model of class
-  \code{bfactorClass}, \code{mirtClass}, or
-  \code{polymirtClass}}
+  \code{bfactorClass} or \code{mirtClass}}
 
-  \item{...}{additional arguments to be passed on to
-  \code{\link[plink]{plink}} generic \code{plot()}. See the
-  \code{\link[plink]{plink}} package for further details.}
+  \item{type}{plot type to use, information
+  (\code{'info'}), information contours
+  \code{('infocontour')}, or item trace lines
+  (\code{'trace'})}
+
+  \item{...}{additional arguments to be passed to lattice}
 }
 \description{
   \code{itemplot} displays various item based IRT plots.
-}
-\section{Methods}{
-  \describe{ \item{itemplot}{\code{signature(object =
-  "bfactorClass")}} \item{itemplot}{\code{signature(object
-  = "mirtClass")}} \item{itemplot}{\code{signature(object =
-  "polymirtClass")}} }
 }
 \examples{
 \dontrun{
@@ -30,14 +25,8 @@
 data(LSAT7)
 fulldata <- expand.table(LSAT7)
 mod1 <- mirt(fulldata,1)
-mod2 <- mirt(fulldata,2)
 
 itemplot(mod1)
-itemplot(mod1, combine = 5, auto.key=list(space="right"))
-
-itemplot(mod2, drape = TRUE)
-itemplot(mod2, type = "vectorplot1")
-
     }
 }
 \author{
